<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.AddMeetingFragment"
    android:orientation="vertical"
    android:padding="17dp">

    <EditText
        android:id="@+id/room_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/Room_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room_edit_text"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/time_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/subject_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_edit_text"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/subject_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/participants_emails_text_add_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_edit_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <Button
        android:id="@+id/add_participant_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/participants_emails_text_add_fragment"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="77dp"
        android:gravity="center_horizontal"
        android:text="@string/add_participant_email_text" />

    <Button
        android:id="@+id/save_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_participant_email_button"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="117dp"
        android:text="@string/save_meeting_text" />

</RelativeLayout>